INTYG-5243: Fix fel efter protractortest.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.html
@@ -11,11 +11,11 @@
     <span dynamic-label key="{{intygType}}.button.send"></span>
   </button>
   <!-- Normal pdf-utskrift av signerat intyg  -->
-  <button type="button"
+  <button ng-if="showPrintBtn()"
+          type="button"
           id="downloadprint"
           class="btn btn-secondary"
           intygType="{{intygType}}"
-          ng-if="showPrintBtn()"
           ng-click="print(viewState.intygModel, false)">
     <span dynamic-label key="common.button.save.as.pdf"></span>
   </button>
