INTYG-5243: Tillbaka knapp styling och förenklad konfigurering.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -11,7 +11,7 @@
 
             <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" href
                                                               wc-back title="Tillbaka till Skriv intyg"
-                                                              class="backlink-icon glyphicon glyphicon-arrow-left"></a>
+                                                              class="backlink-icon"></a>
               <span>{{intygsnamn}}</span><span wc-help-chevron help-text-key="FRM_2.RBK"></span>
             </h1>
 
