--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -29,8 +29,13 @@
 
     <!-- Status -->
     <div class="page-header-divider">
-      <a id="tillbakaButton" wc-authority="NAVIGERING" class="backlink-icon glyphicon glyphicon-arrow-left"
-         ui-sref="webcert.create-choose-certtype-index({patientId:'default'})" title="Tillbaka till Sök/skriv intyg">Tillbaka</a>
+      <div class="inline-block" wc-authority="NAVIGERING" ng-if="::backState">
+        <a ng-click="back()"><i class="material-icons">arrow_back</i></a>
+        <a id="tillbakaButton"
+           class="backlink-icon"
+           ng-click="back()">Tillbaka</a>
+      </div>
+
       <wc-intyg-status intyg-view-state="intygViewState"></wc-intyg-status>
     </div>
     <div class="flex-row">
