INTYG-5540: Fixat loggningen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -43,7 +43,7 @@
                     <br>
                 </div>
                 <div class="floatRight">
-                    <button type="button" class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
+                    <button type="button" class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked();">Läs mer</button>
                 </div>
             </div>
 
