INTYG-5541: ue-component-toggler skall trigga validering vid förändringar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
@@ -4,7 +4,7 @@
              ng-attr-id="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}"
              class="big-checkbox"
              ng-model="vm.showComponents"
-             ng-change="updateValidation()">
+             ng-change="updateValidation(form, model)">
 
         <ue-form-label config="::config.label"></ue-form-label>
       </label>
