INTYG-5243: Mer styling på intygheader.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -37,7 +37,7 @@
 
       <wc-intyg-status intyg-view-state="intygViewState"></wc-intyg-status>
     </div>
-    <div class="flex-row">
+    <div class="flex-row padding-top-small">
       <div class="flex-col-max">
         <!-- Header text -->
         <h2 class="page-heading1">
