--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.html
@@ -1,4 +1,4 @@
-<div class="card clearfix">
+<div class="card">
   <a ng-attr-id="anchor-{{::config.categoryId|ueDomIdFilter}}" name="anchor.{{::config.categoryId}}"></a>
   <div class="ue-kategori__heading" ng-if="::config.label.key">
     <h3>
@@ -8,7 +8,5 @@
     </h3>
     <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
   </div>
-  <span class="">
-    <ue-render-components form="::form" config="::config.components" model="::model" />
-  </span>
+  <ue-render-components form="::form" config="::config.components" model="::model" />
 </div>
