--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.html
@@ -1,19 +1,23 @@
 <div class="infobox">
-  <h3>
-    <span dynamic-label key="common.label.ovanstaende-har-bekraftats"></span>
-  </h3>
-  <h4>
-    <span dynamic-label key="common.date"></span>
-  </h4>
-  <p id="signeringsdatum">{{vm.signeringsdatum | date:'longDate'}}</p>
-  <h4>
-    <span dynamic-label key="common.label.kontakt-info"></span>
-  </h4>
-  <p>
-    <span class="text" id="vardperson_namn">{{vm.skapadAv.fullstandigtNamn}}</span><br>
-    <span class="text" id="vardperson_enhetsnamn">{{vm.skapadAv.vardenhet.enhetsnamn}}</span><br>
-    <span class="text" id="vardperson_postadress">{{vm.skapadAv.vardenhet.postadress}}</span><br>
-    <span class="text"><span id="vardperson_postnummer">{{vm.skapadAv.vardenhet.postnummer}}</span> <span id="vardperson_postort">{{vm.skapadAv.vardenhet.postort}}</span></span><br>
-    <span class="text" id="vardperson_telefonnummer">{{vm.skapadAv.vardenhet.telefonnummer}}</span><br>
-  </p>
+  <div class="signedby-header">
+    <h2>
+      <span dynamic-label key="common.label.ovanstaende-har-bekraftats"></span>
+    </h2>
+    <div class="date-wrapper">
+      <i class="material-icons">date_range</i> <span class="date" id="signeringsdatum">{{vm.signeringsdatum | date:'longDate'}}</span>
+    </div>
+  </div>
+
+  <div class="signedby-body">
+    <h3>
+      <span dynamic-label key="common.label.kontakt-info"></span>
+    </h3>
+    <p>
+      <span class="text" id="vardperson_namn">{{vm.skapadAv.fullstandigtNamn}}</span><br>
+      <span class="text" id="vardperson_enhetsnamn">{{vm.skapadAv.vardenhet.enhetsnamn}}</span><br>
+      <span class="text" id="vardperson_postadress">{{vm.skapadAv.vardenhet.postadress}}</span><br>
+      <span class="text"><span id="vardperson_postnummer">{{vm.skapadAv.vardenhet.postnummer}}</span> <span id="vardperson_postort">{{vm.skapadAv.vardenhet.postort}}</span></span><br>
+      <span class="text" id="vardperson_telefonnummer">{{vm.skapadAv.vardenhet.telefonnummer}}</span><br>
+    </p>
+  </div>
 </div>
