INTYG-5463: Ny design utkastheader

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -49,7 +49,7 @@
             person-id="intygViewState.intygModel.grundData.patient.personId">
         </h3>
         <!-- Patient status -->
-        <wc-patient-status patient="intygViewState.intygModel.grundData.patient" intyg-model="intygViewState.intygModel" intyg-properties="intygViewState.common.intygProperties"></wc-patient-status>
+        <wc-patient-status is-intyg="true" patient="intygViewState.intygModel.grundData.patient" intyg-model="intygViewState.intygModel" intyg-properties="intygViewState.common.intygProperties"></wc-patient-status>
       </div>
       <div class="flex-col-min">
         <!-- Buttonbar -->
