--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/hantera/arendeHantera.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/hantera/arendeHantera.directive.html
@@ -1,7 +1,9 @@
 <div>
-  <label class="checkbox-inline arende-hantera-toggle" ng-if="showHandleToggle()">
+ <wc-checkbox-wrapper ng-if="showHandleToggle()">
     <input type="checkbox" ng-model="handledFunction" ng-model-options="{ getterSetter: true }"
            id="handleCheck-{{arendeListItem.arende.fraga.internReferens}}">
-    Hanterad
-  </label>
+    <label class="checkbox-inline arende-hantera-toggle" ng-attr-for="handleCheck-{{arendeListItem.arende.fraga.internReferens}}">
+      Hanterad
+    </label>
+ </wc-checkbox-wrapper>
 </div>
