--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.html
@@ -1,14 +1,13 @@
 <ue-validation-wrapper validations="validation.messagesByField[config.modelPropToWatch.toLowerCase()]" class="ue-del-fraga">
-      <label class="big-checkbox-label checkbox-inline">
+  <wc-checkbox-wrapper>
       <input type="checkbox"
              ng-attr-id="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}"
-             class="big-checkbox"
              ng-model="vm.showComponents"
              ng-change="updateValidation(form, model)">
-
+      <label ng-attr-for="toggle-{{::config.modelPropToWatch|ueDomIdFilter}}">
         <ue-label config="::config.label"></ue-label>
       </label>
-
+  </wc-checkbox-wrapper>
 
     <div ng-if="vm.showComponents" class="fold-animation toggled-components-container">
       <ue-render-components form="::form" config="::config.components" model="::model" />
