DEVENV: Fix för försvunnen utkastheader.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -3,10 +3,9 @@
   <div ng-hide="viewState.common.error.activeErrorMessageKey">
     <wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading">
 
+      <div class="container-fluid">
 
-      <wc-new-person-id-message class="container-fluid">
-
-        <wc-patient-info-change-message class="row">
+        <div class="row">
           <div class="pull-left">
 
             <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" href
@@ -85,8 +84,6 @@
         </div>
 
       </div>
-
-
 
     </wc-spinner>
   </div>
