--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -2,11 +2,11 @@
   <div ng-if="!isSigned" class="utkast-footer">
 
     <p ng-if="isSignAndSend()">
-      <span dynamic-label key="{{viewState.common.intyg.type}}.label.signandsend"></span>
+      <span dynamic-label key="{{::viewState.common.intyg.type}}.label.signandsend"></span>
     </p>
 
     <!-- Läkare: Signera -->
-    <div wc-authority="SIGNERA_INTYG" intygstyp="{{viewState.common.intyg.type}}">
+    <div wc-authority="SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
       <p ng-show="viewState.common.intyg.isKomplettering">
         <span dynamic-label key="draft.completion.signinfo"></span>
       </p>
@@ -16,14 +16,17 @@
                         alert-message-id="{{getPreviousIntygWarning()}}">
       </wc-alert-message>
 
-      <button type="button" id="signera-utkast-button" class="btn btn-primary"
-              ng-disabled="certForm.$dirty || (getCurrentSignStatus() === 'pending') || disableSign()"
-              ng-keydown="initValidationSequence('signera-utkast-button')"
-              ng-mousedown="initValidationSequence('signera-utkast-button')"
-              ng-click="sign()">
-        <img ng-show="getCurrentSignStatus() === 'pending'" ng-src="/img/ajax-loader-small-green.gif" />
-        <span dynamic-label key="common.{{isSignAndSendOrKomp() ? 'signsend' : 'sign'}}"></span>
-      </button>
+      <wc-button
+          btn-id="signera-utkast-button"
+          btn-class="btn-success"
+          btn-click="sign()"
+          loading="getCurrentSignStatus() === 'pending'"
+          disabled="certForm.$dirty || disableSign()"
+          tooltip="{{::signBtnTooltip}}"
+      >
+        -wc-ikon-30-
+        {{::signBtnText}}
+      </wc-button>
 
       <!-- Om personen har loggat in med BANK ID skall vi visa en liten extra text -->
       <p ng-if="user.authenticationMethod === 'BANK_ID'">
