INTYG-5601: Tagit bort ej längre använda komponenter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -36,8 +36,8 @@
           </div>
           <!-- certificate -->
 
-          <wc-utkast-error-summary-fk category-ids="categoryIds"
-                                      view-state="viewState"></wc-utkast-error-summary-fk>
+          <wc-utkast-error-summary category-ids="categoryIds"
+                                   view-state="viewState"></wc-utkast-error-summary>
           <div ui-view="footer"></div>
 
         </wc-spinner>
