--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
@@ -1,7 +1,7 @@
 <div>
   <wc-form-label to="to" key="options.key"></wc-form-label>
   <textarea id="{{options.key}}" name="{{options.key}}" class="form-control" rows="6" auto-expand ng-model="model[options.key]"
-            maxlength="{{to.htmlMaxlength || 3500}}">
+            ng-model-options="{ debounce: 500 }" maxlength="{{to.htmlMaxlength || 3500}}">
   </textarea>
   <div ng-if="to.subTextId && to.subTextDynId" class="info-transfer">
     <span ng-if="to.subTextId && to.subTextDynId" combined-label dyn-key="{{to.subTextDynId}}.RBK"
