--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -42,6 +42,7 @@
                class="form-control input-full"
                ng-class="{'fielderror' : hasValidationError('hamtasfran', $index)}"
                ng-model="underlag.hamtasFran"
+               ng-model-options="{ debounce: 500 }"
                ng-blur="validate()"
                maxlength="53">
       </td>
