INTYG-5557: Ändrat till yyyy-mm-dd

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/unified-view/uvSignedBy/uvSignedBy.html
@@ -4,7 +4,7 @@
       <span dynamic-label key="common.label.ovanstaende-har-bekraftats"></span>
     </h2>
     <div class="date-wrapper">
-      <i class="material-icons">date_range</i> <span class="date" id="signeringsdatum">{{vm.signeringsdatum | date:'longDate'}}</span>
+      <i class="material-icons">date_range</i> <span class="date" id="signeringsdatum">{{vm.signeringsdatum | date:'yyyy-MM-dd'}}</span>
     </div>
   </div>
 
